--- a/DeliveryApp/Views/Lanche/List.cshtml
+++ b/DeliveryApp/Views/Lanche/List.cshtml
@@ -4,19 +4,23 @@
 <div>
     <h2>@ViewData["Titulo"]</h2>
 </div>
-<h2>@ViewData["Data"]</h2>
 
+@*<h2>@ViewData["Data"]</h2>
 <hr />
 <h3>@ViewBag.Total @ViewBag.TotalLanches</h3>
 <hr />
+<h2>@TempData["Nome"]</h2>*@
 
-<h1>@TempData["Nome"]</h1>
-
-@foreach(var lanche in Model)
-{
-    <div>
-        <h4>@lanche.Nome</h4>
-        <p><img src="@lanche.ImagemUrl"/></p>
-        <p>@lanche.Preco.ToString("c")</p>
+<div class="container">
+    <div class="row">
+        @foreach (var lanche in Model)
+        {
+            <div class="col-sm-4 col-md-4 col-md-4">
+                <p><img src="@lanche.ImagemUrl" class="img-fruit"/></p>
+                <h3>@lanche.Preco.ToString("c")</h3>
+                <h4>@lanche.Nome</h4>
+                <p>@lanche.DescricaoCurta</p>
+            </div>
+        }
     </div>
-}
+</div>
