--- a/DeliveryApp/Views/Lanche/List.cshtml
+++ b/DeliveryApp/Views/Lanche/List.cshtml
@@ -1,8 +1,8 @@
 ﻿@*View fortemente tipada*@
-@model IEnumerable<DeliveryApp.Models.Lanche>
+@model LancheListViewModel
 
 <div>
-    <h2>@ViewData["Titulo"]</h2>
+    <h2>@Model.CategoiriaAtual</h2>
 </div>
 
 @*<h2>@ViewData["Data"]</h2>
@@ -13,7 +13,7 @@
 
 <div class="container">
     <div class="row">
-        @foreach (var lanche in Model)
+        @foreach (var lanche in Model.Lanches)
         {
             <div class="col-sm-4 col-md-4 col-md-4">
                 <p><img src="@lanche.ImagemUrl" class="img-fruit"/></p>
