--- a/DeliveryApp/Views/Lanche/List.cshtml
+++ b/DeliveryApp/Views/Lanche/List.cshtml
@@ -2,7 +2,7 @@
 @model LancheListViewModel
 
 <div>
-    <h2>@Model.CategoiriaAtual</h2>
+    <h2>@Model.CategoriaAtual</h2>
 </div>
 
 @*<h2>@ViewData["Data"]</h2>
@@ -15,7 +15,7 @@
     <div class="row">
         @foreach (var lanche in Model.Lanches)
         {
-            <partial name="_LanchsResumo" for="@lanche" />
+            <partial name="_LanchesResumo" for="@lanche" />
         }
     </div>
 </div>
