--- a/DeliveryApp/Views/CarrinhoCompra/Index.cshtml
+++ b/DeliveryApp/Views/CarrinhoCompra/Index.cshtml
@@ -34,7 +34,7 @@
                         <td class="text-center">
                             <a asp-controller="CarrinhoCompra" asp-action="RemoverItemDoCarrinhoCompra"
                            asp-route-lancheId="@item.Lanche.LancheId">
-                                <img src="~/images/delete.png" width="10px" height="10px" />
+                                <img src="~/images/remove.ico" width="10px" height="10px" />
                             </a>
                         </td>
                     </tr>
