--- a/DeliveryApp/Views/_ViewImports.cshtml
+++ b/DeliveryApp/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using DeliveryApp.Models
 @using DeliveryApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper DeliveryApp.TagHelpers.*, DeliveryApp
