refactor: Otimizando o método Action List de Lanche Controller para automatizar a exibição dos nomes das categorias

--- a/DeliveryApp/Views/Shared/Components/CategoriaMenu/Default.cshtml
+++ b/DeliveryApp/Views/Shared/Components/CategoriaMenu/Default.cshtml
@@ -14,6 +14,7 @@
         <li class="dropdown-divider">></li>
 
         <li>
+            @*Definindo o asp-route-categoria como vazio, ele retorna todos os itens do controller *@
             <a class="dropdown-item" asp-controller="Lanche" asp-action="List" styele="color:black"
                asp-route-categoria="">Todos os lanches</a>
         </li>
